//
//  UnitTesting_DemoUITests.swift
//  UnitTesting DemoUITests
//
//  Created by Soumil on 17/05/19.
//  Copyright © 2019 LPTP233. All rights reserved.
//

import XCTest

class UnitTesting_DemoUITests: XCTestCase {
    
    var app: XCUIApplication!
    var backButton : XCUIElement {
        return app.navigationBars["UnitTesting_Demo.ShowWeatherDataVCTableView"].buttons["Back"]
    }
    override func setUp() {
        // Put setup code here. This method is called before the invocation of each test method in the class.

        // In UI tests it is usually best to stop immediately when a failure occurs.
        continueAfterFailure = false

        // UI tests must launch the application that they test. Doing this in setup will make sure it happens for each test method.
        app = XCUIApplication()
        app.launch()

        // In UI tests it’s important to set the initial state - such as interface orientation - required for your tests before they run. The setUp method is a good place to do this.
    }

    override func tearDown() {
        // Put teardown code here. This method is called after the invocation of each test method in the class.
    }

    func testExample() {
        // Use recording to get started writing UI tests.
        // Use XCTAssert and related functions to verify your tests produce the correct results.
        
        let app = XCUIApplication()
        assertButtonUIElements()
        app.buttons["Get weather from city name"].tap()
        assertCellUIElements()
        backButton.tap()
        assertButtonUIElements()
        app.buttons["Get weather from coordinates"].tap()
        assertCellUIElements()
        backButton.tap()
        assertButtonUIElements()
        app.buttons["Get weather from zip code"].tap()
        assertCellUIElements()
        backButton.tap()
        assertButtonUIElements()
    }
    
    func assertCellUIElements() {
        XCTAssert(app.staticTexts["City Name"].exists)
        XCTAssert(app.staticTexts["Humidity"].exists)
        XCTAssert(app.staticTexts["Temperature"].exists)
    }

    func assertButtonUIElements() {
        XCTAssert(app.buttons["Get weather from city name"].exists)
        XCTAssert(app.buttons["Get weather from city name"].exists)
        XCTAssert(app.buttons["Get weather from city name"].exists)
    }
}
